fix multicolumn text align

--- a/assets/base.css
+++ b/assets/base.css
@@ -3705,6 +3705,7 @@ details-disclosure > details {
   font-weight: bold;
   font-size: 30px;
   color: #272C48;
+  text-align: center;
 }
 
 .section-subtitle {
