--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -7,6 +7,7 @@
 }
 
 .multicolumn .title-wrapper-with-link {
+  flex-direction: column;
   margin-top: 0;
   justify-content: center;
 }
